manage audit log dev

--- a/src/app/dashboard/action-plan/action-plan-auditor/action-plan-auditor.component.html
+++ b/src/app/dashboard/action-plan/action-plan-auditor/action-plan-auditor.component.html
@@ -25,7 +25,7 @@
                                         <th>Planned End Date</th>
                                         <th>No Of Observation</th>
                                         <th>Score</th>
-                                        <th>Evidence</th>
+                                        <th>Evidence Received</th>
                                         <th>Action Plan </th>    
                                     </tr>
                                 </thead>
