--- a/src/app/dashboard/action-plan/action-plan-update/action-plan-update.component.html
+++ b/src/app/dashboard/action-plan/action-plan-update/action-plan-update.component.html
@@ -22,7 +22,7 @@
                         <th>Detail of Improvement Plan</th>
                         <th>In-Charge</th>
                         <th>Date</th>
-                        <th>Action</th>
+                        <th>Enter Remarks</th>
                     </tr>
                 </thead>
                 <tbody>
