--- a/src/app/dashboard/audit-plan/view-plan/view-evidence/view-evidence.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-evidence/view-evidence.component.html
@@ -20,7 +20,7 @@
                         <tbody class="text-center" *ngFor="let item of obsList">
                           <tr>
                             <td>{{item.totalPoint}}</td>
-                            <td (click)="closure()">{{item.closure}}</td>
+                            <td >{{item.closure}}</td>
                             <td>{{item.verify}}</td>
                             <td>{{item.closed}}</td>
                             <td>{{item.partialClosed}}</td>
