--- a/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
@@ -96,7 +96,7 @@
                                     </div>
                                 </div>
                                 <span class="pt-2">
-                                    <a (click)="getAttachment()" style="color:#ff7900">Click here to View Resource</a>
+                                    <a (click)="getAttachment()" style="color:#003cff">Click here to View Attachment</a>
                                 </span>
                             </div>
                         </div>
