--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -106,7 +106,7 @@
                     <th *ngIf="isSuperAdmin || isPlanner">View</th>
                     <th *ngIf="isSuperAdmin || isPlanner">Add Auditor</th>
                     <th>Auditors Assigned</th>
-                    <th>Final Auditor</th>
+                    <th>Lead Auditor</th>
                     <th>Status </th>
                     <th> Action Plan</th>
                     <th> Evidences Recieved </th>
