--- a/src/app/dashboard/manage-audit/manage-audit-view/manage-audit-view.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-view/manage-audit-view.component.html
@@ -97,6 +97,9 @@
                                             formControlName="auditeeEmail" [attr.disabled]="true">
                                     </div>
                                 </div>
+                                <span class="pt-2">
+                                    <a (click)="getAttachment()" style="color:#003cff">Click here to View Attachment</a>
+                                </span>
                             </div>
                         </div>
                         <div class="card-footer">
