--- a/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
@@ -94,7 +94,7 @@
                             <div class="table-responsive max_hei_table">
                                 <table id="" class="table table-bordered table-hover">
                                     <thead>
-                                        <tr class=" text-center sticky_header">
+                                        <tr class=" sticky_header">
                                             <th>Audit No</th>
                                             <th>Vendor Code </th>
                                             <th>Vendor Name</th>
@@ -102,9 +102,12 @@
                                             <th>Any Other Location</th>
                                             <th>Planned Start Date </th>
                                             <th>Planned End Date</th>
-                                            <th>Status </th>
+                                            <th>Audit Plan Status (By Vendor) </th>
+                                           
                                             <th *ngIf="isAuditor || isPlanner">View</th>
                                             <th *ngIf="isAuditor || isSuperAdmin || isPlanner">Initiate Audit </th>
+                                            <th>Audit Plan Approval Status(By SH / DPM)</th>
+                                            <th>Audit Log</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -113,13 +116,14 @@
                                             <td>{{item.auditNumber}}</td>
                                             <td>{{item.vendorCode}}</td>
                                             <td>{{item.vendorName}}</td>
-                                            <td>{{item.locationName}}</td>
+                                            <td><p class="show1 mb-0">{{item.locationName}}</p></td>
                                             <td>{{item.otherLocation}}</td>
                                             <td>{{item.plannedStartDate | date:dateFormate}}</td>
                                             <td>{{item.plannedEndDate | date:dateFormate}}</td>
                                             <td>
-                                                <p [ngClass]="item.status" class="btn btn-defult">{{item.status}} </p>
+                                                <p [ngClass]="item.status" class="btn btn-defult width-123">{{item.status}} </p>
                                             </td>
+                                        
                                             <td *ngIf="isAuditor || isPlanner">
                                                 <a (click)="viewManageAudit(item)" ><img
                                                         src="../../../../assets/icon/view.png" class="viwe_iamge"></a>
@@ -131,6 +135,8 @@
                                                         class="viwe_iamge"></a>
                                                 </div>
                                             </td>
+                                            <td><p class="mb-0 width-123"></p></td>
+                                            <td><button (click)="openModal(item)" class="btn btn-secondary">Audit Log</button></td>
                                         </tr>
                                     </tbody>
                                 </table>
