employee vendor master changes

--- a/src/app/dashboard/manage-audit/last-year-remarks/last-year-remarks.component.html
+++ b/src/app/dashboard/manage-audit/last-year-remarks/last-year-remarks.component.html
@@ -17,7 +17,7 @@
           <tbody class="text-center">
             <tr class="text-center" *ngFor="let item of lastRemarks;let i =index;">
               <th>{{i+1}}</th>
-              <td></td>
+              <td>{{item.remark}}</td>
             </tr>
           </tbody>
           <tbody class="text-center">
