--- a/src/app/dashboard/masters/employee/employee-edit/employee-edit.component.html
+++ b/src/app/dashboard/masters/employee/employee-edit/employee-edit.component.html
@@ -33,6 +33,14 @@
                           </select>
                         </div>
                       </div>
+                      <div class="col-sm-4">
+                        <div class="form-group">
+                          <label class="form_label">Employee UserName</label>
+                          <input type="text" class="form-control inputbox_css" 
+                             placeholder="Enter Employee UserName"
+                            formControlName="userName" maxlength="200">
+                        </div>
+                      </div>
                     </div>
                   </div>
                   <div class="card-footer">
