--- a/src/app/dashboard/evidence/evidence-receive-category/evidence-receive-category.component.html
+++ b/src/app/dashboard/evidence/evidence-receive-category/evidence-receive-category.component.html
@@ -15,7 +15,7 @@
                               <thead>
                                 <tr class="now_rap sticky_header" >
                                     <th>Total Point Raised</th>
-                                    <th>Closure</th>
+                                    <th>Closure Submitted</th>
                                     <th>Verify</th>
                                     <th>Closed</th>
                                     <th>Partailly Closed</th>
