--- a/src/app/dashboard/evidence/evidence-submission/evidence-submission.component.html
+++ b/src/app/dashboard/evidence/evidence-submission/evidence-submission.component.html
@@ -12,9 +12,8 @@
                         <th colspan="10">Observation({{actionPlanList.length}})</th>
                     </tr>
                     <tr class="sticky_header">
-                        <th>Observation</th>
-                        <th>Audit Area</th>
-                        <th>Regulation </th>
+                        <th>Item No.</th>
+                        <th>Sub Item No.</th>
                         <th>Desired Improvement Points </th>
                         <th>Detail of Improvement Plan</th>
                         <th>In-Charge</th>
@@ -27,9 +26,8 @@
                 </thead>
                 <tbody>
                     <tr class="tbody_data" *ngFor="let item of actionPlanList| paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index">
-                        <td>{{(i+1) + pagination.pageSize * ( pagination.pageNumber-1 ) }}</td>    
-                        <td><p class="show1">{{item.auditArea}}</p></td>
-                        <td><p class="show1">{{item.regulationText}}</p></td>
+                        <td>{{item.item}}</td>  
+                        <td>{{item.subItem}}</td>
                         <td>{{item.remark}}</td>
                         <td>{{item.detailOfImprovement}}</td>
                         <td>{{item.incharge}}</td>
