--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
@@ -44,16 +44,11 @@
                         </td>
                         <td (click)="details(item.categoryId)">
                           <div class="d-flex align-items-center">
-                         <span class="per-text"> {{item.categoryScore }}/{{item.totalCount}}</span>
+                      <!--    <span class="per-text"> {{item.categoryScore }}/{{item.totalCount}}</span> -->
                          <div class="progress  prog-css-bar">
                           <div class="progress-bar" role="progressbar"  [style.width.%]="item.scorePercent"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"> {{item.scorePercent}}%
                           </div>
                         </div>
-                          <!-- <div class="progress prog-css-bar">
-                          <div class="progress-bar bg-success" role="progressbar" [style.width.%]="item.percentageCompletion"  aria-valuenow="" aria-valuemin="0" aria-valuemax="100"></div>
-                       
-                        
-                      </div> -->
                     </div></td>
                        
                       </tr>
@@ -75,7 +70,7 @@
           <div class="flex_direction_media ">
             <div class="d-flex align-items-center d-flex justify-content-between">
               <div></div>
-            <button (click)="getEmployeeList()" class="btn btn-success mr-1" data-toggle="modal" data-target="#submit" >Submit</button>
+            <button (click)="getUsers()" class="btn btn-success mr-1" data-toggle="modal" data-target="#submit" >Submit</button>
             <button (click)="back()" class="btn btn-default">Back</button>
             </div>
           </div>
