--- a/src/app/dashboard/manage-audit/manage-audit-summary/manage-audit-summary.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-summary/manage-audit-summary.component.html
@@ -35,11 +35,7 @@
                   <tr *ngFor="let item of summaryDetails; let i=index;">
                     <th>{{i+1}}</th>
                     <th>{{item.categoryName}}</th>
-                    <!--               rowspan="5"      </tr>
-                    <tr> 
-                      <th>1</th>-->
                     <td>{{item.auditAreaName}}</td>
-                    <!-- <td>①</td> -->
                     <td>{{item.regulationText}}</td>
                     <td *ngIf="item.judgementSymbol =='Triangle'"><img src="../../../../assets/icons/triangle.png"
                         class="diacisq_css"></td>
@@ -86,7 +82,6 @@
                   </tr>
                   <tr class="text-center bac_table_white">
                     <th colspan="2">Date of Issue
-                      <!-- <td>{{auditReportData?.dateOfIssue | date:dateFormat}}</td> -->
                     <td rowspan="2">{{auditReportData?.preparedBy}}</td>
                     <td rowspan="2">{{auditReportData?.verifiedBy}}</td>
                     <td rowspan="2">{{auditReportData?.approvedBy}}</td>
@@ -95,26 +90,20 @@
                     <th colspan="2">Copy to</th>
                     <th colspan="2">Supplier name</th>
                     <td colspan="2">{{auditReportData?.dateOfIssue | date:dateFormat}}</td>
-                    <!-- <th>Supplier Attendant Name</th>
-                      <th colspan="2">Audit Date</th> -->
                   </tr>
                   <tr class="text-center">
                     <td>Vendor</td>
                     <td></td>
-                    <td rowspan="2" colspan="2" class="ver_midd">Dummy Industries</td>
+                    <td rowspan="2" colspan="2" class="ver_midd">{{auditDetails?.vendorName}}</td>
                     <th colspan="3">Supplier Attendant Name</th>
                     <th colspan="2">Audit Date</th>
-                    <!-- <td colspan="2">{{auditReportData?.auditDate | date:dateFormat}}</td> -->
                   </tr>
                   <tr class="text-center">
                     <td>QAPQ</td>
                     <td></td>
-                    <td colspan="3" rowspan="7" class="ver_midd">
-                      <!-- Mr. X - Director <br />
-                      Mr. Y - Plant Head -->
+                    <td colspan="3" class="vertical_top" ><p *ngFor="let item of auditReportData?.vendorAttendanceNames;let i =index;">{{i+1}}-{{item}}</p>
                     </td>
                     <td colspan="2">{{auditReportData?.auditDate | date:dateFormat}}</td>
-                    <!-- <td colspan="2">{{auditReportData?.auditDate | date:dateFormat}}</td> -->
                   </tr>
                   <tr class="text-center">
                     <td>SC</td>
@@ -149,39 +138,6 @@
                     <td></td>
                   </tr>
                 </thead>
-                <!-- <tbody class="text-center"> -->
-                <!-- <tr>
-                      <td>Vendor</td>
-                      <td>1</td>
-                      <td rowspan="2" class="ver_midd">Dummy Industries</td>
-                      <td>Mr. X - Director</td>
-                      <td colspan="2">{{auditReportData?.auditDate | date:dateFormat}}</td>
-                    </tr>
-                    <tr>
-                      <td>QAPQ</td>
-                      <td>1</td>
-                      <td rowspan="2">Mr. Y - Plant Head</td>  
-                      <th colspan="2">Audit Person</th>
-                    </tr>
-                    <tr>
-                      <td>SC</td>
-                      <td>1</td>
-                      <th>Supplier code:DD01</th>
-                      <td colspan="2">{{auditReportData?.auditPerson}}</td>
-                    </tr>
-                    <tr>
-                      <td></td>
-                      <td></td>
-                      <th>(Audit Score)</th>
-                    </tr>
-                    <tr>
-                      <td>Total</td>
-                      <td>3</td>
-                      <td>62</td>
-                    </tr> -->
-                <!-- </tbody> -->
-                <!-- <tbody class="text-center">
-                  </tbody> -->
               </table>
             </div>
             <div class="table-responsive">
@@ -199,21 +155,8 @@
                 </thead>
               </table>
             </div>
-
             <p class="mb-1 mt-2"><b>Supplier category is "{{supplierCategoryStatus}}". Major improvement areas are as
                 follows:-</b></p>
-            <!-- <p>
-                1- New product development planning needs improvement.  All relevant activities to be included in preparation of APQP plan.<br>
-                2- Review of APQP plan to be adequately recorded and Process FMEAs to be made in accordance with the defined standards.<br>
-                3- Initial flow control process implementation to be improved. Extension criteria of the activity to be clearly defined..<br>
-                4- 4M change management to be defined and implemented effectively on shop floor with proper recording and quality checks of parts..<br>
-                5- Tier - 2 supplier controls needs strengthening. Supplier rating and auditing system to be standardized..<br>
-                6- Skill Evaluation criteria to be defined for operators and adherence to be strengthened. Monitoring of annual training plan to be improved..<br>
-                7- Quality abnormality handling process needs effective implementation with focus on root cause analysis and standardization of countermeasure actions..<br>
-                8- Implementation of updated standards on shop floor and actual working as per defined PCS / WI to be ensured..<br>
-                9- Adherence of material storage system (FIFO etc.) at BOP area to be improved. Visual identification of material to be strengthened..<br>
-                10- Implementation of defined work instructions and adherence to set standards to be strengthened..<br>
-              </p> -->
             <p class="mb-0" *ngFor="let item of criticalObservations;let i =index">
               {{i+1}}- {{item.criticalObservation}}
             </p>
@@ -281,7 +224,7 @@
           <div class="card-header">
             <div class="header_card">
               <h3 class="card-title">Audit Area Details </h3>
-              <button class="btn btn-success" (click)="exportAsPDF('receivingData');">Download PDF ()</button>
+              <button class="btn btn-success" (click)="exportAsPDF('receivingData');">Download PDF</button>
             </div>
           </div>
           <div class="card-body" id="receivingData">
@@ -408,6 +351,17 @@
                     <th>RESULT OF VERIFICATION</th>
                   </tr>
                 </thead>
+                <tbody>
+                   <tr *ngFor="let item of cReportDetails">
+                   <td>{{item.item}}</td>
+                   <td>{{item.subItem}}</td>
+                   <td>{{item.remark}}</td>
+                   <td>{{item.detailOfImprovement}}</td>
+                   <td>{{item.incharge}}</td>
+                   <td>{{item.dateOfSubmission | date:dateFormat}}</td>
+                   <td>{{item.status}}</td>
+                  </tr> 
+                </tbody>
               </table>
             </div>
           </div>
