--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -14,7 +14,7 @@
             </a>
           </li>
           <li class="nav-item" >
-            <a class="nav-link active-sidebar" *ngIf="isSuperAdmin || isPlanner">
+            <a class="nav-link active-sidebar" *ngIf="isSuperAdmin">
               <img src="../../assets/icons/management.png" class="side_img">
               <p>
                 Setup
